Internal_Main/Internal_Main.cydsn/BUILD.log
--------------- Build Started: 05/27/2021 12:21:17 Project: Internal_Main, Configuration: ARM GCC 5.4-2016-q2-update Debug ---------------
cydsfit.exe -.appdatapath "C:\Users\cdrow\AppData\Local\Cypress Semiconductor\PSoC Creator\4.4" -.fdsnotice -.fdswarpdepfile=warp_dependencies.txt -.fdselabdepfile=elab_dependencies.txt -.fdsbldfile=generated_files.txt -.fdsreffile=referenced_files.txt -p C:\Users\cdrow\Documents\GitHub\Li-CellTesting_Script\Internal_Main\Internal_Main.cydsn\Internal_Main.cyprj -d CY8C4145LQI-PS433 -s C:\Users\cdrow\Documents\GitHub\Li-CellTesting_Script\Internal_Main\Internal_Main.cydsn\Generated_Source\PSoC4 -- -yv2 -q10 -ygs -o2 -v3 -.fftcfgtype=LE
Elaborating Design...
HDL Generation...
Synthesis...
Tech Mapping...
Analog Placement...
Analog Routing...
Analog Code Generation...
Digital Placement...
Digital Routing...
Bitstream Generation...
Bitstream Verification...
Static timing analysis...
API Generation...
Dependency Generation...
Cleanup...
arm-none-eabi-gcc.exe -mcpu=cortex-m0plus -mthumb -I. -IGenerated_Source\PSoC4 -Wa,-alh=.\CortexM0p\ARM_GCC_541\Debug/main.lst -g -D DEBUG -D CY_CORE_ID=0 -Wall -ffunction-sections -ffat-lto-objects -Og -c main.c -o .\CortexM0p\ARM_GCC_541\Debug\main.o
main.c:31:0: warning: "DEBUG" redefined
 #define DEBUG
 ^
<command-line>:0:0: note: this is the location of the previous definition
main.c: In function 'main':
main.c:217:12: warning: unused variable 'rxData' [-Wunused-variable]
     uint32 rxData;
            ^
main.c:213:11: warning: unused variable 'res2' [-Wunused-variable]
     int32 res2 = 10000;         //Seconds resistor in ^this^ divider
           ^
main.c:212:11: warning: unused variable 'res1' [-Wunused-variable]
     int32 res1 = 828000;        //The first resistor in the battery voltage divider circuit
           ^
main.c:210:10: warning: variable 'stopCode' set but not used [-Wunused-but-set-variable]
     int8 stopCode = 0;          // Code for determining the reason why test was stopped
          ^
main.c:199:11: warning: variable 'shuntAmps' set but not used [-Wunused-but-set-variable]
     float shuntAmps; 
           ^
main.c: At top level:
main.c:335:0: error: unterminated #ifdef
                         #ifdef DEBUG 
 ^
The command 'arm-none-eabi-gcc.exe' failed with exit code '1'.
--------------- Build Failed: 05/27/2021 12:21:41 ---------------
